fixed quote frame from shifting with right column and updated the look of the left column and alignment.

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -13,6 +13,7 @@ h2{
   color: rgba(128, 128, 128, 0.834);
   font-size:3em;
   font-weight:500;
+  text-align: center;
 }
 
 .title-size {
@@ -24,18 +25,54 @@ h2{
 .gif-size{
   width:70%;
 }
+
+.full-width{
+  position: relative;
+  width:120%;
+  left: 10%;
+}
+
+
+
+.right-column-full-width{
+  position: relative;
+  width:50%;
+  left: 0%;
+}
+.column-full-width{
+  position: relative;
+  width:50%;
+  left: 2%;
+}
+.no-border-pls{
+  border:none;
+}
 .quote-frame{
   background:rgba(0, 0, 0, 0.481);
   border-radius: 30px 200px / 220px;
-  padding:5%;
-  width:120%;
-  position: relative;
-  left:-40%;
-  
+  padding:4%;
+  position: absolute !important;
+  top: 25% !important;
+  left: 3% !important;
+  max-width: 30%;
 }
+.center-text-pls{
+  text-align: center;
+}
+
+.start-top{
+  position: relative;
+  top:-2%;
+}
+.accordion-button:hover{
+  background: rgba(251, 255, 0, 0.058) !important;
+
+}
+
+
 .quote-text{
   font-family: 'Akshar', sans-serif;
-  font-size: 1.7em;
+  font-size: 1.5em;
   color:rgb(162, 161, 161)
 }
 .center{
@@ -63,7 +100,14 @@ h2{
   font-size: 3.5em;
   font-weight: 700;
 }
+.bigger-text{
+  position: relative;
+  left: 2%;
+  font-size: 3em;
+  font-weight: 900;
+  color: rgba(165, 164, 164, 0.379);
 
+}
 .no-padding {
   padding: 0 !important;
 }
